version 0.99.5-rc1 - 12-Nov-2010
. [NEW] Director: setProjection calls "updateProjection" delegate if "custom" projection is used
. [NEW] Particles: Added a new type kCCPositionTypeRelative. Useful for "trail" particles. Added Test.
. [NEW] Textures: Added support for pvz.ccz and pvr.gz formats
. [NEW] Textures: TextureCache has a method to test if a texture is already cached (issue #793)
. [NEW] ZipUtils: Added generic functions to uncompress any .gz or .ccz file (issue #1016)
. [FIX] Actions: OrbitCamera doesn't crash on Simulator
. [FIX] CCArray: fastRemoveObjectAtIndex works as expected (issue #1024)
. [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
. [FIX] config: CC_FONT_LABEL_SUPPORT is again, enabled by default
. [FIX] Configuration: removed main bundle from CCConfiguration (issue #839 issue #773)
. [FIX] Director: projection is doubled in RetinaDisplay mode
. [FIX] DrawingPrimitives: don't modify the buffer in RetinaDisplay (issue #995)
. [FIX] Label: BMFontLabel simplified loading of atlas. Doesn't use CCFileUtils (issue #1031)
. [FIX] Menu: MenuItems can draw its children (issue #458)
. [FIX] Menu: MenuItems positions can be controlled manually (issue #1013)
. [FIX] Menu: Menus uses touch priority kCCMenuTouchPriority (-128) (issue #1033)
. [FIX] Node: convertToAR method fixed (issue #1017)
. [FIX] Node: vertexZ works OK in RetinaDisplay mode
. [FIX] Particles: Improved doxygen documentation (issue #1026)
. [FIX] Particles: centerOfGravity renamed to sourcePosition (issue #1026)
. [FIX] RenderTexture: removed unneeded and dangerous assert in getUIImageAsDataFromBuffer
. [FIX] RenderTexture: fixed important memory leak when saving images
. [FIX] SpriteBatchNode: improved performance when drawing the batch (issue #824)
. [FIX] SpriteBatchNode: children sprites use the visible property correctly (issue #665)
. [FIX] TextureCache: Improved loading time of cached PVR images (issue #998)